fixed spacing on panel sync names, set scores to display for 9s rather than 8 to account for transitions and updated which score is shown in the ranked screen

--- a/src/stylesheets/panel.style.css
+++ b/src/stylesheets/panel.style.css
@@ -540,7 +540,7 @@ span2 {
   text-align: left;
   font-family: Gotham Bold, sans-serif;
   text-transform: uppercase;
-  font-size: 95px;
+  font-size: 88px;
   padding-top: 0px;
 }
 
@@ -548,7 +548,7 @@ span2 {
   text-align: left;
   font-family: Gotham Bold, sans-serif;
   text-transform: uppercase;
-  font-size: 95px;
+  font-size: 88px;
   padding-top: 0px;
 }
 
